# gondar

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Makefile.jenkins  Makefile.linux  README.md  TODO  buildspec.yml  buildspecwin.yml  buildunzipper  buildxor  dev  deviceguy.c  deviceguy.cc  deviceguy.h  diskwritethread.cc  diskwritethread.h  downloader.cc  downloader.h  gondar-release.py  gondar.c  gondar.h  gondar.pro  gondar.rc  gondarwizard.cc  gondarwizard.h  gondarwizard.pro  gondarwizard.qrc  linuxtest  main.cc  minizip.diff  minizip.patch  neverware_unzipper.c  neverware_unzipper.h  package.py  requirements.txt  (+10 more)
codebuild/: buildlinux.yml  buildwin.yml  master.yml  masterchromeover.yml  monolith.yml  pr.yml  release.yml  releasechromeover.yml  runwinrelease.yml  updatelinux.codebuild  updatelinux.yml
docker/: README.md  build  dev  gondar-debian.Dockerfile  gondar-linux-codebuild.Dockerfile  gondar-linux.Dockerfile  gondar-win32.Dockerfile  monolith.Dockerfile  mxe.Dockerfile
infra/: format.py  gdisk.cmake  gondar.cmake  lint.py  shared.py
resources/: about.html  gondar.exe.manifest  gondar.rc  gondarwizard.qrc  style.css
src/: CPPLINT.cfg  about_dialog.cc  about_dialog.h  admin_check_page.cc  admin_check_page.h  app.pro  barathrum.cc  barathrum.h  chromeover_login_page.cc  chromeover_login_page.h  config.h.in  device.cc  device.h  device_list_model.cc  device_list_model.h  device_picker.cc  device_picker.h  device_select_page.cc  device_select_page.h  deviceguy.cc  deviceguy.h  diskwritethread.cc  diskwritethread.h  dismissprompt.cc  dismissprompt.h  download_progress_page.cc  download_progress_page.h  downloader.cc  downloader.h  error_page.cc  error_page.h  feedback_dialog.cc  feedback_dialog.h  gondar.c  gondar.cc  gondar.h  gondarimage.h  gondarpage.cc  gondarpage.h  gondarsite.cc  (+69 more)
test/: bigtest.cc  slow_test.cc  slow_test.h  test.cc  test.h  test.pro
